2008-03-12  Jb Evain  <jbevain@novell.com>

	* NewArrayExpression.cs (Emit): naive implementation of emit support
	for array initialization.

2008-03-11  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs: very naive implementation of emitting
	array accesses.

2008-03-11  Jb Evain  <jbevain@novell.com>

	* *.cs: Move the different Emit* helpers to EmitContext,
	so that they get used more naturally by the non Expression
	types.

2008-03-10  Jb Evain  <jbevain@novell.com>

	* TypeBinaryExpression.cs, Expression.cs: refactor an EmitIsInst.
	* UnaryExpression.cs: implement TypeAs using the EmitIsInst.

2008-03-10  Jb Evain  <jbevain@novell.com>

	* TypeBinaryExpression.cs (Emit): implement.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* MemberListBinding.cs (Emit): implement.
	* MemberBinding.cs (EmitLoadMember): add helper.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* MemberAssignment.cs (Emit): implement.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* ElementInit.cs (Emit): implement.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* EmitContext.cs: the DebugContext delegate the CreateDelegate
	to a DynamicContext to avoid visibility issues in debug mode.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* EmitContext.cs: Lambda methods bypass JIT visibility checks.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* MethodCallExpression.cs, Expression.cs: refactor method calling
	into a more sophisticated EmitCall in Expression.
	* InvocationExpression.cs (Emit): implement using the previous EmitCall.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* Expression.cs: add a EmitCall helper.
	* MemberExpression.cs: implement property access.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* MethodCallExpression.cs, Expression.cs: refactor a EmitLoad in Expression.
	* MemberExpression.cs: use EmitLoad to load the instance field if needed.

2008-03-06  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs, Expression.cs: move EmitStored from
	BinaryExpression to Expression.