@@ -1,3 +1,7 @@
+2008-03-13  Jb Evain  <jbevain@novell.com>
+
+	* NewArrayExpression.cs (EmitNewArrayBounds): implement.
+
 2008-03-12  Jb Evain  <jbevain@novell.com>
 
 	* NewArrayExpression.cs (Emit): naive implementation of emit support
